# pelotero-bash

./: .envrc  .gitattributes  .gitignore  README.md  console.html  drafting.html  flake.nix  index.html  main.js  main.ts  package-lock.json  package.json  packages.dhall  pelotero.cabal  pnpm-lock.yaml  spago-packages.nix  spago.dhall  tsconfig.json  wallet.html
config/: config.json  explanation.txt  roster.json
contract/: flake.nix  scraper.cabal  vesting-contract.cabal
contract/src/: Main.hs  Scraper.hs
nix/: hix.nix
scripts/: compositeStats.sh  compositeStatus.sh  flattened.json  getCurrentWkStats.sh  scrape_active_players.sh  scrape_active_players_chksm.sh  sort_players.sh  wholeDAY.sh  wholeDAYchksm.sh
src/: Main.purs  index.html  main.js  main.ts  package-lock.json  package.json  requirements.txt  style.css  tsconfig.json
src/Fantasy/: Fantasy.bak  Fantasy.purs  Fantasy.pursbak  Main.purs
src/Old/fantasy/: Baseball.hs
src/fantasy/: HeadToHead.hs  RndmBaseball.hs
src/fantasyMVP/: Baseball.hs  HeadToHead.hs
src/haskell/: hello.hs
src/haskell/fantasyMVP/: StatScraper.hs  fantasy.hs
src/purescript/: Euler.purs  Fantasy.purs  Form.purs  LeagueConfig.purs  Main.purs  PlayerStats.purs  TeamRoster.purs  URI.js  URI.purs  index.html  index.js
src/purescript/Console/: Console.purs  Form.purs  Main.purs
src/purescript/Data/: AddressBook.purs
src/purescript/Data/AddressBook/: Validation.purs
src/purescript/Drafting/: Drafting.purs  Main.purs
src/purescript/Effect/: Alert.js  Alert.purs  Storage.js  Storage.purs
src/purescript/Fantasy/: Fantasy.purs  Main.purs
src/purescript/Server/: Main.purs
src/purescript/Wallet/: Main.js  Main.purs
src/purescript/no-peeking/: Solutions.js
src/purescript/test/: Examples.js  Examples.purs  Main.purs  MySolutions.js  MySolutions.purs
src/purescript/test/no-peeking/: Solutions.purs
web/: console.html  drafting.html  index.html  wallet.html
