cabal-version: 3.0

name: vesting-contract
version: 1.0.0.2

common lang
  ghc-options: -Wall 

executable vesting-contract
  import: lang
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Scraper
  build-depends:
      base
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-script-utils
    , serialise
    , filepath
    , http-client
    , http-client-tls
    , aeson
    , time
    , bytestring
    , directory
    , transformers
    , text
    , lens-aeson
    , aeson-pretty
    , lens
    , unordered-containers
    , vector
    , containers
    , filepath
